fix(fe): overflow bootrap dropdown menu in angular expansion panel

--- a/frontend/src/app/user/dashboard/tags/user-tags.component.scss
+++ b/frontend/src/app/user/dashboard/tags/user-tags.component.scss
@@ -10,3 +10,7 @@
     font-size: 1rem;
   }
 }
+
+mat-expansion-panel {
+  overflow: inherit;
+}
